fix overflow in article

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -11,6 +11,15 @@
   li + li {
     margin-top: .25rem;
   }
+
+  &.full {
+    p {
+      overflow-wrap: break-word;
+    }
+    li {
+      word-break: break-word;
+    }
+  }
 }
 
 .posts {
